--- a/frontend/src/login.css
+++ b/frontend/src/login.css
@@ -27,9 +27,10 @@ code {
 .container {
   display: flex;
   justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  height: 100vh; /* Make the container full height of the viewport */
-}
+  /* align-items: center; /* Center vertically */
+  /* height: 100vh; Make the container full height of the viewport */
+/* } */ 
+
 
 .wrapper {
   width: 420px;
@@ -126,4 +127,4 @@ code {
 
 .register-link p a:hover {
   text-decoration: underline;
-} */
+} 
