--- a/frontend/src/Navbar.css
+++ b/frontend/src/Navbar.css
@@ -1,6 +1,4 @@
-/* Navbar.css */
 
-/* General navbar link styles */
 .navbar-custom .nav-link, .navbar-custom .navbar-brand {
   color: #ffffff !important; /* Ensuring it overrides Bootstrap or other styles */
 }
@@ -11,10 +9,7 @@
 }
 
 /* Button styles within the navbar */
-.navbar-custom .btn-outline-danger, .navbar-custom .btn-primary {
-  color: #ffffff; /* Text color */
-  margin-left: 0.5rem; /* Consistent spacing on the left */
-}
+
 
 .navbar-custom .form-inline {
   flex-grow: 1; /* Allows the form to grow and use available space */
@@ -28,15 +23,12 @@
   width: 100%; /* Allows width to be responsive within the max-width limit */
 }
 
-
 .navbar-custom .profile-link {
   margin-right: 10px; /* existing margin */
   margin-left: 10px; /* add space to the left of the profile link */
 }
 
-.navbar-custom .btn-outline-danger {
-  margin-left: 10px; /* ensure there's space on the left side of the logout button */
-}
+
 
 .navbar-custom .dropdown-menu {
   position: absolute;
@@ -61,4 +53,10 @@
     margin-right: 0.5rem; /* Right margin on smaller screens */
     margin-bottom: 0.5rem; /* Bottom margin for better spacing */
   }
+}
+
+
+.logout-btn, .login-btn {
+  color: white;
+  padding: 2px 20px;
 }
